change recipelist.css, th and td, use nth-child and n to select all the column, use longCell as classname of ingredients and preparation

--- a/src/RecipeList.css
+++ b/src/RecipeList.css
@@ -6,9 +6,11 @@ img{
     height:100%;
 }
 
-.tableheader1{
-    width: 10%;
+
+th.longCell:nth-child(n){
+    width:30%;
 }
-.tableheader2{
+
+td.longCell:nth-child(n){
     width:30%;
 }
